# atari-rl

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: dqn.yaml  ppo.yaml
src/asteroids_rl/: record.py
src/atari_rl/: __init__.py  callbacks.py  env.py  evaluate.py  record.py  record_milestones.py  train.py
tests/: test_env.py  test_train.py
