[project]
name = "atari-rl"
version = "0.1.0"
description = "Train a PPO agent on Atari Space Invaders with a reproducible pipeline"
requires-python = ">=3.10"
dependencies = [
    "stable-baselines3[extra]>=2.3",
    "gymnasium[atari]>=0.29",
    "ale-py>=0.9",
    "autorom[accept-rom-license]>=0.6",
    "torch>=2.3",
    "wandb>=0.17",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "hydra-core>=1.3",
    "moviepy>=1.0",
    "imageio-ffmpeg>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atari_rl"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Install a CUDA 12.6 torch build (works on driver >= 12.6) instead of PyPI's default,
# which tracks the newest CUDA and fails on older cloud-GPU drivers ("driver too old").
# Linux/Windows pull from the cu126 index; other platforms fall back to PyPI (CPU build).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
